--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Great Britain -- History'
 - !lcc 'DA'
+- GITenberg
 title: "History of the English People, Volume VI\r\nPuritan England, 1642-1660; The\
   \ Revolution, 1660-1683"
 url: http://www.gutenberg.org/ebooks/24254
